--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
               <p style="color: #D6001C;">Celebrating Christmas by Remembering our Lord, Jesus Christ's Birth!</p>
             </div>
           </div>
-              <p style="font-size: 30px; color:black; margin-top: 10px; margin-left: 10px;">If You Have Questions Let Us Know In The <a style="margin-left:0; text-decoration:underline;" class="contact" href="contact.html">Contact Us</a></p>
+              <p style="font-size: 30px; color:black; margin-top: 10px; margin-left: 10px;">If You Have Questions Let Us Know In The <a style="margin-left:0; text-decoration:underline;" class="contact" href="https://wonderbible.world/contact.html">Contact Us</a></p>
         </div>
         </div>
         <p style="font-size: 50px; margin-top: 70px; text-decoration: underline;">Update Quiz</p>
         <p style="color:darkred; font-size:40px">Try To Find <span style="color: black;"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible</a></span>'s Hidden Games. Good Luck! (The Games Are Only Available On Windows/Mac or Any Type Of Desktop Devices)</p> 
         <img src="Hidden Games.png">
         <p style="font-size: 50px; margin-top: 70px; text-decoration: underline;">Coming Update</p>
-        <p style="color:darkred; font-size:40px">We Are Working On The <strong style="color:yellow;">ScriptureQuest</strong> Level 2, Might Take 2 Or MORE Months (Since We Both Are Busy)</p> 
+        <p style="color:darkred; font-size:40px">We Are Working On The <strong onclick="document.location='https://wonderbible.world/scripturequest'" style="cursor: pointer;" class="sqg">ScriptureQuest</strong>Level 2, Might Take 2 Or MORE Months (Since We Both Are Busy)</p> 
       
       </div>
         <div style="margin-top: 100px;">
