--- a/index.html
+++ b/index.html
@@ -25,24 +25,27 @@
       <div>
         <img src="Update.png"width="300" style="margin-top: 50px;">
         <p style="font-size: 50px; margin-top: 10px; text-decoration: underline;">Update</p>
-        <p style="color:darkred; font-size:40px">Christmas UPDATES!!!</p> 
-        <div style="background:linear-gradient(to bottom, #D6001C, orange, yellow, rgb(0, 255, 0), rgb(0, 115, 255), rgb(172, 56, 255), #D6001C);">
-          <div onclick="document.location='https://wonderbible.world/we.html'" class="tap" style="cursor:pointer;">
-            <img class="w3-container w3-center w3-animate-left" style="margin-top: 40px;" src="WB Logo.png" width="250">
-            <marquee style="display:inline-block; width:200px; text-decoration: none; margin-left: 100px; display:inline-block; margin-bottom: 1000px; height:100px; font-family: Arial; margin-left: 90px; margin-bottom: 40px; font-size:30px;" scrollamount="10" direction="down"<span class="ffb"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible</span></marquee>
-            <div style="font-size: 30px; margin-left:10px; margin-top: 40px;">
-              <p style="color:black;"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible Is A Website Helping Peoples To Know The Word Of God.</p>
-              <p style="color: #D6001C;">Celebrating Christmas by Remembering our Lord, Jesus Christ's Birth!</p>
-            </div>
+        <p style="color:darkred; font-size:40px">ScriptureQuest Level 2! Start Playing ScriptureQuest Now!!!</p> 
+        <div style="margin-left:20px">
+          <p class="wel" style="margin-bottom: 25px;">Welcome To <span class="wel2" style="color:yellow;"><strong>ScriptureQuest</strong></span>!</p>
+          <p class="let" style="margin-bottom: 30px;">Let's Start This Quiz Right Away!</p>
+          <img style="margin-bottom: 25px;" src="https://wonderbible.world/scripturequest/ScriptureQuest Logo.png" width="300">
+          <p class="let" style="margin-bottom:30px; margin-left:40px; margin-top:0;">With Old And New Testaments</p>
           </div>
-              <p style="font-size: 30px; color:black; margin-top: 10px; margin-left: 10px;">If You Have Questions Let Us Know In The <a style="margin-left:0; text-decoration:underline;" class="contact" href="https://wonderbible.world/contact.html">Contact Us</a></p>
+          <img src="https://wonderbible.world/scripturequest/Old X New.png" width="400" style="margin-left: 0px;">
+          <p class="let" style="margin-bottom:30px; margin-left:50px; margin-top:50px;">Working On Level 1 Upto Level 25</p>
+          <img src="https://wonderbible.world/scripturequest/1 X 25.png" width="427" style="margin-left: 0px;">
+          <p class="let" style="margin-bottom:30px; font-size: 22px; margin-left:30px; margin-top:50px;">Start <span style="color:black;"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible</span>'s Trivia <span style="font-weight: bolder; color: yellow;">ScriptureQuest</span> By Tapping The Button Below</p>
+          <img src="https://wonderbible.world/scripturequest/Down Arrow.png" style="margin-left: 40px;" width="250">
+          <button class="start" style="margin-bottom: 25px; margin-left:90px; display: block;" onclick="document.location='https://wonderbible.world/scripturequest/1st.html'">Start ScriptureQuest</button>
+          <div style="margin-top: 100px;">
         </div>
         </div>
         <p style="font-size: 50px; margin-top: 70px; text-decoration: underline;">Update Quiz</p>
         <p style="color:darkred; font-size:40px">Try To Find <span style="color: black;"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible</a></span>'s Hidden Games. Good Luck! (The Games Are Only Available On Windows/Mac or Any Type Of Desktop Devices)</p> 
         <img src="Hidden Games.png">
         <p style="font-size: 50px; margin-top: 70px; text-decoration: underline;">Coming Update</p>
-        <p style="color:darkred; font-size:40px">We Are Working On The <strong onclick="document.location='https://wonderbible.world/scripturequest'" style="cursor: pointer;" class="sqg">ScriptureQuest</strong>Level 2, Might Take 2 Or MORE Months (Since We Both Are Busy)</p> 
+        <p style="color:gray; font-size:40px">🤷 No Upcoming Updates Yet 😕</p> 
       
       </div>
         <div style="margin-top: 100px;">
@@ -53,7 +56,7 @@
           <a href="https://discord.gg/8C4h8aFPt3"><i class="fab fa-discord"></i></a>
           <a href="https://t.me/wonderbible"><i class="fab fa-telegram"></i></a>
           <p class="we" style="cursor: pointer; font-weight: bold; margin-top: 30px;" onclick="document.location='https://github.com/WonderBible/WonderBible.GitHub.Io/discussions'">Problem? Join The GitHub Repository And Tell Us The Problem</p></p>
-          <p style="margin-top:20px;" class="copyright">&#169; Copyright 2023 <strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible. All right reserved.</p>
+          <p style="margin-top:20px;" class="copyright">&#169; Copyright 2024 <strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible. All right reserved.</p>
         </div>
 
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
