--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         </div>
         <p style="font-size: 50px; margin-top: 70px; text-decoration: underline;">Update Quiz</p>
-        <p style="color:darkred; font-size:40px">Try To Find <span style="color: black;"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible</a></span>'s Hidden Games. Good Luck! (The Games Are Only Available On Windows/Mac or Any Type Of Desktop Devices)</p> 
+        <p style="color:darkred; font-size:40px">Try To Find <span style="color: black;"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible</a></span>'s Hidden Games. Good Luck! (Some Games Are Only Available On Laptop/Desktop & Some Of Them Are Avaiable On Both Laptop/Desktop & Mobile)</p> 
         <img src="Hidden Games.png">
         <p style="font-size: 50px; margin-top: 70px; text-decoration: underline;">Coming Update</p>
         <p style="color:gray; font-size:40px">🤷 No Upcoming Updates Yet 😕</p> 
