--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta content="Updates | WonderBible/Valt-Wel" property="og:title"/>
+    <meta content="WonderBible - The Free Way To Read The Bible & Measure Your Knowledge Of Bible By Playing ScriptureQuest By Valt-Wel/Wel & Barok." property="og:description"/>
+    <meta content="https://wonderbible.world/updates/Update.png" property="og:image"/>
     <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +45,7 @@
         </div>
         </div>
         <p style="font-size: 50px; margin-top: 70px; text-decoration: underline;">Update Quiz</p>
-        <p style="color:darkred; font-size:40px">Try To Find <span style="color: black;"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible</a></span>'s Hidden Games. Good Luck! (Some Games Are Only Available On Laptop/Desktop & Some Of Them Are Available On Both Laptop/Desktop & Mobile. The Type Of The Devices Availability Are Listed On The Chosen Game.)</p> 
+        <p style="color:darkred; font-size:40px">Try To Find <span style="color: black;"><strong style="color:orange;">W</strong>onder<strong style="color:#5d00ff">B</strong>ible</a></span>'s Hidden Games. Good Luck! (Some Games Are Only Available On Laptop/Desktop & Some Of Them Are Avaiable On Both Laptop/Desktop & Mobile. The Type Of The Devices Are Listed On The Game.)</p> 
         <img src="Hidden Games.png">
         <p style="font-size: 50px; margin-top: 70px; text-decoration: underline;">Coming Update</p>
         <p style="color:gray; font-size:40px">🤷 No Upcoming Updates Yet 😕</p> 
